[add] ciclo while per per gli elementi li

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <h1>Cosa comprare al supermercato: </h1>
 
-    <ul>
+    <ul id="shopping-list">
 
       <li>primo oggetto</li>
       <li>secondo oggetto</li>
